Dados commit: -CRUD de usuários = OK -CRUD de livros   = OK
-Funcionalidades do Bibliotecário = 100%
-Funcionalidades do Balconista    = 50%

-Melhoras nos botões de Ativar/Inativar livros;
-Melhoras no posicionamento do section;
-Adicionado as colunas datacad, dataalt, na tabela de livros;
-Adicionado as colunas datacad, dataalt e datanasc na tabela de usuários;
-Feito as alterações nas operações CRUD dos usuários/livros e modo a deixar salvos as datas corretamente...
-Adicionado tela de consulta de acervo próprio pro balconista.

--- a/web/acessoBalconista.xhtml
+++ b/web/acessoBalconista.xhtml
@@ -104,7 +104,7 @@
     <i><h1 align="center"> BiblioTec </h1></i>
     <p:menubar style="align-items: center">
         <p:menuitem value="SAIR" url="gestaoBibliotecas.xhtml"></p:menuitem>
-        <p:menuitem value="ACERVO" url="consultarAcervo.xhtml"></p:menuitem>
+        <p:menuitem value="ACERVO" url="consultarAcervoBalconista.xhtml"></p:menuitem>
         <p:menuitem value="AJUDA?" url="javascript: abrir();"></p:menuitem>
     </p:menubar>
     <section alig="center" class="row">
@@ -115,16 +115,16 @@
                 </div>
                 <div class="form-group">
                     <div class="form-group">
-                        <h:commandButton value="Cadastrar Usuario" class="btn btn-block btn-primary"
+                        <h:commandButton value="Cadastrar" class="btn btn-block btn-primary"
                                          action="cadastrarUsuarioBalconista"></h:commandButton>
 
-                        <h:commandButton value="Consultar Usuario" class="btn btn-block btn-primary"
+                        <h:commandButton value="Consultar" class="btn btn-block btn-primary"
                                          action="consultaUsuario"></h:commandButton>
 
-                        <h:commandButton value="Alterar Usuario" class="btn btn-block btn-primary"
+                        <h:commandButton value="Alterar" class="btn btn-block btn-primary"
                                          action="editarUsuario"></h:commandButton>
 
-                        <h:commandButton value="Deletar Usuario" class="btn btn-block btn-primary"
+                        <h:commandButton value="Deletar" class="btn btn-block btn-primary"
                                          action="deletarUsuario"></h:commandButton>
 
 
@@ -137,16 +137,16 @@
                 </div>
                 <div class="form-group">
                     <div class="form-group">
-                        <h:commandButton value="Cadastrar Empréstimo" class="btn btn-block btn-primary"
+                        <h:commandButton value="Cadastrar" class="btn btn-block btn-primary"
                                          action="acessoBalconista"></h:commandButton>
 
-                        <h:commandButton value="Consultar Empréstimo" class="btn btn-block btn-primary"
+                        <h:commandButton value="Consultar" class="btn btn-block btn-primary"
                                          action="acessoBalconista"></h:commandButton>
 
-                        <h:commandButton value="Alterar Empréstimo" class="btn btn-block btn-primary"
+                        <h:commandButton value="Alterar" class="btn btn-block btn-primary"
                                          action="acessoBalconista"></h:commandButton>
 
-                        <h:commandButton value="Deletar Empréstimo" class="btn btn-block btn-primary"
+                        <h:commandButton value="Deletar" class="btn btn-block btn-primary"
                                          action="acessoBalconista"></h:commandButton>
 
 
