--- a/web/consultarAcervoBalconista.xhtml
+++ b/web/consultarAcervoBalconista.xhtml
@@ -83,7 +83,8 @@
     </div>
     <i><h1 align="center"> BiblioTec </h1></i>
     <p:menubar style="align-items: center">
-        <p:menuitem value="INÍCIO" url="gestaoBibliotecas.xhtml"></p:menuitem>
+        <p:menuitem value="SAIR" url="gestaoBibliotecas.xhtml"></p:menuitem>
+        <p:menuitem value="MENU INICIAL" url="acessoBalconista.xhtml"></p:menuitem>
         <p:menuitem value="AJUDA?" url="javascript: abrir();"></p:menuitem>
     </p:menubar>
     <section alig="center" class="">
