--- a/web/deletarLivro.xhtml
+++ b/web/deletarLivro.xhtml
@@ -122,11 +122,11 @@
                 </div>
                 <div class="form-group">
                     <div class="form-group">
-                        <h:commandButton value="Cadastrar" class="btn btn-block btn-primary"
+                        <h:commandButton value="Cadastrar Livro" class="btn btn-block btn-primary"
                                          action="cadastrarLivro" url="cadastrarLivro.xhtml"></h:commandButton>
                     </div>
                     <div class="form-group">
-                        <h:commandButton value="Alterar" class="btn btn-block btn-primary"
+                        <h:commandButton value="Alterar Livro" class="btn btn-block btn-primary"
                                          action="alterarLivro" url="cadastrarLivro.xhtml"></h:commandButton>
                     </div>
                 </div>
@@ -137,9 +137,8 @@
                     <p:inputText value="#{livroBean.livro.titulo}" class="form-control" required="false" placeholder="Insira o título do livro"></p:inputText>
                 </div>
                 <div class="form-group">
-                    <h:commandButton value="Buscar" class="btn btn-block btn-primary"
-                                     action="#{livroBean.realizarConsultaLivroBibliotecario}"
-                                     url="index.home.xhtml"></h:commandButton>
+                    <h:commandButton value="Buscar Livro" class="btn btn-block btn-primary"
+                                     action="#{livroBean.realizarConsultaLivroBibliotecario}"></h:commandButton>
                 </div>
             </h:form>
             <section alig="center" class="right">
@@ -147,10 +146,6 @@
                     <p:dataTable value="#{livroBean.realizarConsultaLivroBibliotecario()}" var="livro" border="9"
                                  rendered="true"
                                  title="Relação de Livros.">
-
-                        <p:commandButton value="Deletar" action="#{livroBean.realizarDelecaoLivro}"
-                                         update="@form"></p:commandButton>
-
                         <p:column>
                             <f:facet name="header">Id</f:facet>
                             #{livro.codlivro}
@@ -184,6 +179,14 @@
                             #{livro.numchamada}
                         </p:column>
                         <p:column>
+                            <f:facet name="header">Dt. Cad</f:facet>
+                            #{livro.datacad}
+                        </p:column>
+                        <p:column>
+                            <f:facet name="header">Dt. Alt</f:facet>
+                            #{livro.dataalt}
+                        </p:column>
+                        <p:column>
                             <f:facet name="header">Status</f:facet>
                             #{livro.status}
                         </p:column>
@@ -210,7 +213,7 @@
                             </h:form>
                         </div>
                         <div class="form-group">
-                            <h:commandButton value="Deletar" class="btn btn-block btn-primary"
+                            <h:commandButton value="Deletar Livro" class="btn btn-block btn-primary"
                                              rendered="true" onclick="abri()"></h:commandButton>
                         </div>
                     </h:form>
