--- a/web/cadastrarLivro.xhtml
+++ b/web/cadastrarLivro.xhtml
@@ -85,15 +85,15 @@
                 </div>
                 <div class="form-group">
                     <div class="form-group">
-                        <h:commandButton value="Consultar" class="btn btn-block btn-primary"
-                                         action="consultarLivro" url="index.home.xhtml"></h:commandButton>
+                        <h:commandButton value="Consultar Livro" class="btn btn-block btn-primary"
+                                         action="consultarLivro"></h:commandButton>
                     </div>
                     <div class="form-group">
-                        <h:commandButton value="Alterar" class="btn btn-block btn-primary"
+                        <h:commandButton value="Alterar Livro" class="btn btn-block btn-primary"
                                          action="alterarLivro"></h:commandButton>
                     </div>
                     <div class="form-group">
-                        <h:commandButton value="Deletar" class="btn btn-block btn-primary"
+                        <h:commandButton value="Deletar Livro" class="btn btn-block btn-primary"
                                          action="deletarLivro"></h:commandButton>
                     </div>
                 </div>
@@ -135,7 +135,7 @@
                                  required="true" placeholder="Insira o número de chamada"></p:inputText>
                 </div>
                 <div class="form-group">
-                    <h:commandButton value="Cadastrar" class="btn btn-block btn-primary"
+                    <h:commandButton value="Cadastrar Livro" class="btn btn-block btn-primary"
                                      action="#{livroBean.realizarCadastroLivro}"/>
                 </div>
             </h:form>
