--- a/web/consultarLivro.xhtml
+++ b/web/consultarLivro.xhtml
@@ -62,10 +62,11 @@
 <h:body>
     <div id="popup" class="popup">
         <p>Olá,
-            <button class="fechaAjuda" onclick="fechar()" >x</button>
+            <button class="fechaAjuda" onclick="fechar()">x</button>
             <b></b>
             <p>
-                Para visualizar nosso acervo, preencha o título e clique em <b>Consultar</b>.<br/>Caso contrário, todos os livros serão listados.
+                Para visualizar nosso acervo, preencha o título e clique em
+                <b>Consultar</b>.<br/>Caso contrário, todos os livros serão listados.
             </p>
         </p>
     </div>
@@ -82,33 +83,34 @@
                 </div>
                 <div class="form-group">
                     <div class="form-group">
-                        <h:commandButton value="Cadastrar" class="btn btn-block btn-primary"
+                        <h:commandButton value="Cadastrar Livro" class="btn btn-block btn-primary"
                                          action="cadastrarLivro" url="cadastrarLivro.xhtml"></h:commandButton>
                     </div>
                     <div class="form-group">
-                        <h:commandButton value="Alterar" class="btn btn-block btn-primary"
+                        <h:commandButton value="Alterar Livro" class="btn btn-block btn-primary"
                                          action="alterarLivro" url="cadastrarLivro.xhtml"></h:commandButton>
                     </div>
                     <div class="form-group">
-                        <h:commandButton value="Deletar" class="btn btn-block btn-primary"
+                        <h:commandButton value="Deletar Livro" class="btn btn-block btn-primary"
                                          action="deletarLivro" url="deletarLivro.xhtml"></h:commandButton>
                     </div>
                 </div>
             </h:form>
             <section alig="center" class="row">
-
                 <div class="form-group">
                     <h:form id="telaConsultaBibliotecario">
                         <div class="form-group">
                             <h:outputLabel value="Título"/>
-                            <p:inputText value="#{livroBean.livro.titulo}" class="form-control" required="false" placeholder="Insira o título do livro"></p:inputText>
+                            <p:inputText value="#{livroBean.livro.titulo}" class="form-control" required="false"
+                                         placeholder="Insira o título do livro"></p:inputText>
                         </div>
                         <div class="form-group">
-                            <h:commandButton value="Buscar" class="btn btn-block btn-primary"
-                                             action="#{livroBean.realizarConsultaLivroBibliotecario}" url="index.home.xhtml"></h:commandButton>
+                            <h:commandButton value="Buscar Livro" class="btn btn-block btn-primary"
+                                             action="#{livroBean.realizarConsultaLivroBibliotecario}"/>
                         </div>
                     </h:form>
-                    <p:dataTable value="#{livroBean.realizarConsultaLivroBibliotecario()}" var="livro" border="9" rendered="true"
+                    <p:dataTable value="#{livroBean.realizarConsultaLivroBibliotecario()}" var="livro" border="9"
+                                 rendered="true"
                                  title="Relação de Livros.">
                         <p:column>
                             <f:facet name="header">Id</f:facet>
@@ -145,6 +147,14 @@
                         <p:column>
                             <f:facet name="header">Núm. Chamada</f:facet>
                             #{livro.numchamada}
+                        </p:column>
+                        <p:column>
+                            <f:facet name="header">Dt. Cad</f:facet>
+                            #{livro.datacad}
+                        </p:column>
+                        <p:column>
+                            <f:facet name="header">Dt. Alt</f:facet>
+                            #{livro.dataalt}
                         </p:column>
                         <p:column>
                             <f:facet name="header">Status</f:facet>
