--- a/web/gestaoBibliotecas.xhtml
+++ b/web/gestaoBibliotecas.xhtml
@@ -121,7 +121,7 @@
                 top: -420px;
                 bottom: 0;
                 left: 0px;
-                right: -1100px;
+                right: -1104px;
                 margin: auto;
                 border: 1px;
                 width: 250px;
@@ -168,7 +168,7 @@
         <div class="parteLogin" id="parteLogin">
 
             <h:form id="telaLogin">
-                <i><h5 align="center">Acesso</h5><br></br></i>
+                <h5 align="center">Acesso</h5><br></br>
                 <div class="usuario" id="usuario">
                     <h:outputLabel value="Usuário"/><br></br>
                     <p:inputText value="#{loginBean.user.usuario}" class="form-control"
